GramaticaPortugolParser.py
# Generated from GramaticaPortugol.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramaticaPortugolParser ( Parser ):

    grammarFileName = "GramaticaPortugol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'{'", "'}'", "'funcao'", 
                     "'inicio'", "'('", "')'", "','", "'='", "'inteiro'", 
                     "'real'", "'caracter'", "'cadeia'", "'escreva'", "'leia'", 
                     "'se'", "'entao'", "'senao'", "'enquanto'", "'faca'", 
                     "'+'", "'-'", "'*'", "'/'", "'e'", "'ou'", "'=='", 
                     "'!='", "'>'", "'<'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEIRO", "REAL", "CARACTER", "CADEIA", 
                      "VARIAVEL", "WS" ]

    RULE_programa = 0
    RULE_inicio = 1
    RULE_declaracoes = 2
    RULE_declara = 3
    RULE_dado_declara = 4
    RULE_tipo = 5
    RULE_comandos = 6
    RULE_comando = 7
    RULE_atribui = 8
    RULE_escreva = 9
    RULE_leia = 10
    RULE_se = 11
    RULE_senao = 12
    RULE_enquanto = 13
    RULE_dado = 14
    RULE_expressao_aritmetica = 15
    RULE_termo_aritmetico = 16
    RULE_fator_aritmetico = 17
    RULE_expressao_logica = 18
    RULE_expressao_relacional = 19
    RULE_operador_relacional = 20
    RULE_numerais = 21
    RULE_textos = 22

    ruleNames =  [ "programa", "inicio", "declaracoes", "declara", "dado_declara", 
                   "tipo", "comandos", "comando", "atribui", "escreva", 
                   "leia", "se", "senao", "enquanto", "dado", "expressao_aritmetica", 
                   "termo_aritmetico", "fator_aritmetico", "expressao_logica", 
                   "expressao_relacional", "operador_relacional", "numerais", 
                   "textos" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    INTEIRO=33
    REAL=34
    CARACTER=35
    CADEIA=36
    VARIAVEL=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inicio(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.InicioContext,0)


        def EOF(self):
            return self.getToken(GramaticaPortugolParser.EOF, 0)

        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = GramaticaPortugolParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(GramaticaPortugolParser.T__0)
            self.state = 47
            self.match(GramaticaPortugolParser.T__1)
            self.state = 48
            self.inicio()
            self.state = 49
            self.match(GramaticaPortugolParser.T__2)
            self.state = 50
            self.match(GramaticaPortugolParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InicioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.DeclaracoesContext,0)


        def comandos(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.ComandosContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_inicio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInicio" ):
                listener.enterInicio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInicio" ):
                listener.exitInicio(self)




    def inicio(self):

        localctx = GramaticaPortugolParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inicio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(GramaticaPortugolParser.T__3)
            self.state = 53
            self.match(GramaticaPortugolParser.T__4)
            self.state = 54
            self.match(GramaticaPortugolParser.T__5)
            self.state = 55
            self.match(GramaticaPortugolParser.T__6)
            self.state = 56
            self.match(GramaticaPortugolParser.T__1)
            self.state = 57
            self.declaracoes()
            self.state = 58
            self.comandos()
            self.state = 59
            self.match(GramaticaPortugolParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaPortugolParser.DeclaraContext)
            else:
                return self.getTypedRuleContext(GramaticaPortugolParser.DeclaraContext,i)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = GramaticaPortugolParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0):
                self.state = 61
                self.declara()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.TipoContext,0)


        def dado_declara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaPortugolParser.Dado_declaraContext)
            else:
                return self.getTypedRuleContext(GramaticaPortugolParser.Dado_declaraContext,i)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_declara

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclara" ):
                listener.enterDeclara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclara" ):
                listener.exitDeclara(self)




    def declara(self):

        localctx = GramaticaPortugolParser.DeclaraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declara)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.tipo()
            self.state = 68
            self.dado_declara()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 69
                self.match(GramaticaPortugolParser.T__7)
                self.state = 70
                self.dado_declara()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dado_declaraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self):
            return self.getToken(GramaticaPortugolParser.VARIAVEL, 0)

        def dado(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.DadoContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_dado_declara

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDado_declara" ):
                listener.enterDado_declara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDado_declara" ):
                listener.exitDado_declara(self)




    def dado_declara(self):

        localctx = GramaticaPortugolParser.Dado_declaraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dado_declara)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(GramaticaPortugolParser.VARIAVEL)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 77
                self.match(GramaticaPortugolParser.T__8)
                self.state = 78
                self.dado()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = GramaticaPortugolParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaPortugolParser.ComandoContext)
            else:
                return self.getTypedRuleContext(GramaticaPortugolParser.ComandoContext,i)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = GramaticaPortugolParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comandos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137439592448) != 0):
                self.state = 83
                self.comando()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribui(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.AtribuiContext,0)


        def escreva(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.EscrevaContext,0)


        def leia(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.LeiaContext,0)


        def se(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.SeContext,0)


        def enquanto(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.EnquantoContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = GramaticaPortugolParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comando)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.atribui()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.escreva()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.leia()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.se()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.enquanto()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self):
            return self.getToken(GramaticaPortugolParser.VARIAVEL, 0)

        def dado(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.DadoContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_atribui

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribui" ):
                listener.enterAtribui(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribui" ):
                listener.exitAtribui(self)




    def atribui(self):

        localctx = GramaticaPortugolParser.AtribuiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atribui)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(GramaticaPortugolParser.VARIAVEL)
            self.state = 97
            self.match(GramaticaPortugolParser.T__8)
            self.state = 98
            self.dado()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrevaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dado(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaPortugolParser.DadoContext)
            else:
                return self.getTypedRuleContext(GramaticaPortugolParser.DadoContext,i)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_escreva

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscreva" ):
                listener.enterEscreva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscreva" ):
                listener.exitEscreva(self)




    def escreva(self):

        localctx = GramaticaPortugolParser.EscrevaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_escreva)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(GramaticaPortugolParser.T__13)
            self.state = 101
            self.match(GramaticaPortugolParser.T__5)
            self.state = 102
            self.dado()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 103
                self.match(GramaticaPortugolParser.T__7)
                self.state = 104
                self.dado()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(GramaticaPortugolParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeiaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaPortugolParser.VARIAVEL)
            else:
                return self.getToken(GramaticaPortugolParser.VARIAVEL, i)

        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_leia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeia" ):
                listener.enterLeia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeia" ):
                listener.exitLeia(self)




    def leia(self):

        localctx = GramaticaPortugolParser.LeiaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_leia)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(GramaticaPortugolParser.T__14)
            self.state = 113
            self.match(GramaticaPortugolParser.T__5)
            self.state = 114
            self.match(GramaticaPortugolParser.VARIAVEL)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 115
                self.match(GramaticaPortugolParser.T__7)
                self.state = 116
                self.match(GramaticaPortugolParser.VARIAVEL)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(GramaticaPortugolParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_logica(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.Expressao_logicaContext,0)


        def comandos(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.ComandosContext,0)


        def senao(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.SenaoContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_se

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSe" ):
                listener.enterSe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSe" ):
                listener.exitSe(self)




    def se(self):

        localctx = GramaticaPortugolParser.SeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_se)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(GramaticaPortugolParser.T__15)
            self.state = 125
            self.match(GramaticaPortugolParser.T__5)
            self.state = 126
            self.expressao_logica()
            self.state = 127
            self.match(GramaticaPortugolParser.T__6)
            self.state = 128
            self.match(GramaticaPortugolParser.T__16)
            self.state = 129
            self.match(GramaticaPortugolParser.T__1)
            self.state = 130
            self.comandos()
            self.state = 131
            self.match(GramaticaPortugolParser.T__2)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 132
                self.senao()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SenaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comandos(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.ComandosContext,0)


        def se(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.SeContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_senao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSenao" ):
                listener.enterSenao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSenao" ):
                listener.exitSenao(self)




    def senao(self):

        localctx = GramaticaPortugolParser.SenaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_senao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(GramaticaPortugolParser.T__17)
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 136
                self.match(GramaticaPortugolParser.T__1)
                self.state = 137
                self.comandos()
                self.state = 138
                self.match(GramaticaPortugolParser.T__2)
                pass
            elif token in [16]:
                self.state = 140
                self.se()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnquantoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_logica(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.Expressao_logicaContext,0)


        def comandos(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.ComandosContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_enquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnquanto" ):
                listener.enterEnquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnquanto" ):
                listener.exitEnquanto(self)




    def enquanto(self):

        localctx = GramaticaPortugolParser.EnquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_enquanto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(GramaticaPortugolParser.T__18)
            self.state = 144
            self.match(GramaticaPortugolParser.T__5)
            self.state = 145
            self.expressao_logica()
            self.state = 146
            self.match(GramaticaPortugolParser.T__6)
            self.state = 147
            self.match(GramaticaPortugolParser.T__19)
            self.state = 148
            self.match(GramaticaPortugolParser.T__1)
            self.state = 149
            self.comandos()
            self.state = 150
            self.match(GramaticaPortugolParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DadoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def textos(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.TextosContext,0)


        def expressao_aritmetica(self):
            return self.getTypedRuleContext(GramaticaPortugolParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_dado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDado" ):
                listener.enterDado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDado" ):
                listener.exitDado(self)




    def dado(self):

        localctx = GramaticaPortugolParser.DadoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_dado)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35, 36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.textos()
                pass
            elif token in [6, 22, 33, 34, 37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.expressao_aritmetica()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_aritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo_aritmetico(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaPortugolParser.Termo_aritmeticoContext)
            else:
                return self.getTypedRuleContext(GramaticaPortugolParser.Termo_aritmeticoContext,i)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_expressao_aritmetica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_aritmetica" ):
                listener.enterExpressao_aritmetica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_aritmetica" ):
                listener.exitExpressao_aritmetica(self)




    def expressao_aritmetica(self):

        localctx = GramaticaPortugolParser.Expressao_aritmeticaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expressao_aritmetica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.termo_aritmetico()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 157
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 158
                self.termo_aritmetico()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Termo_aritmeticoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator_aritmetico(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaPortugolParser.Fator_aritmeticoContext)
            else:
                return self.getTypedRuleContext(GramaticaPortugolParser.Fator_aritmeticoContext,i)


        def getRuleIndex(self):
            return GramaticaPortugolParser.RULE_termo_aritmetico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo_aritmetico" ):
                listener.enterTermo_aritmetico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo_aritmetico" ):
                listener.exitTermo_aritmetico(self)




    def termo_aritmetico(self):
